kube/netpol/istio-egress.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wavefront-external
  namespace: spring-petclinic
spec:
  hosts:
  - longboard.wavefront.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egress-offcluster
  namespace: spring-petclinic
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - longboard.wavefront.com
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-wavefront
  namespace: spring-petclinic
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: wavefront
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-wavefront-through-egress-gateway
  namespace: spring-petclinic
spec:
  hosts:
  - longboard.wavefront.com
  gateways:
  - mesh
  - istio-egress-offcluster
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - longboard.wavefront.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: wavefront
        port:
          number: 443
  - match:
    - gateways:
      - istio-egress-offcluster
      port: 443
      sniHosts:
      - longboard.wavefront.com
    route:
    - destination:
        host: longboard.wavefront.com
        port:
          number: 443
      weight: 100
