kube/netpol/cluster3-denyall.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: spring-petclinic
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          istio-control-plane: "true"
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          control-plane: "true"
  - to:
    - namespaceSelector:
        matchLabels:
          istio-control-plane: "true"
  - to:
    - ipBlock:
        cidr: 34.86.88.251/32         
    ports:
    - port: 443
      protocol: TCP
