kube/netpol/istio-vets-bak.yml
    
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-to-vets
  namespace: spring-petclinic
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: vets-service
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: intra-namespace-to-vets
  namespace: spring-petclinic
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["spring-petclinic"]
