kube/netpol/istio-vets.yml
    
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-to-vets
  namespace: spring-petclinic
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
    to:
    - operation:
        hosts: 
        - vets-service.lab.***REMOVED***

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: intra-namespace-to-vets
  namespace: spring-petclinic
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["spring-petclinic"]
    to:
    - operation:
        hosts: 
        - vets-db-mysql.lab.***REMOVED***
        - vets-db-mysql-slave.lab.***REMOVED***
