kube/netpol/istio-visits.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-to-visits
  namespace: spring-petclinic
spec:
  selector:
    matchLabels:
      app: visits-service
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: intra-namespace-to-visits
  namespace: spring-petclinic
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["spring-petclinic"]
